ONGDB-254 - Add latest 4.4 community open core