@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018-2022 "Graph Foundation,"
+ * Copyright (c) "Graph Foundation,"
  * Graph Foundation, Inc. [https://graphfoundation.org]
  *
  * This file is part of ONgDB.
@@ -18,7 +18,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 /*
- * Copyright (c) 2002-2020 "Neo4j,"
+ * Copyright (c) "Neo4j"
  * Neo4j Sweden AB [http://neo4j.com]
  *
  * This file is part of Neo4j.
@@ -38,15 +38,14 @@
  */
 package org.neo4j.kernel.impl.security;
 
-import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
+import org.neo4j.configuration.Config;
+import org.neo4j.configuration.GraphDatabaseSettings;
 import org.neo4j.graphdb.config.Configuration;
-import org.neo4j.graphdb.factory.GraphDatabaseSettings;
 import org.neo4j.graphdb.security.URLAccessRule;
 import org.neo4j.graphdb.security.URLAccessValidationError;
 
@@ -72,16 +71,16 @@ class FileURLAccessRule implements URLAccessRule
                     "configuration property '" + GraphDatabaseSettings.allow_file_urls.name() + "' is false" );
         }
 
-        final File root = config.get( GraphDatabaseSettings.load_csv_file_url_root );
-        if ( root == null )
+        if ( !( (Config) config ).isExplicitlySet( GraphDatabaseSettings.load_csv_file_url_root ) )
         {
             return url;
         }
+        final Path root = config.get( GraphDatabaseSettings.load_csv_file_url_root );
 
         try
         {
-            final Path urlPath = Paths.get( url.toURI() );
-            final Path rootPath = root.toPath().normalize().toAbsolutePath();
+            final Path urlPath = Path.of( url.toURI() );
+            final Path rootPath = root.normalize().toAbsolutePath();
             // Normalize to prevent dirty tricks like '..'
             final Path result =
                     rootPath.resolve( urlPath.getRoot().relativize( urlPath ) ).normalize().toAbsolutePath();
