@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018-2022 "Graph Foundation,"
+ * Copyright (c) "Graph Foundation,"
  * Graph Foundation, Inc. [https://graphfoundation.org]
  *
  * This file is part of ONgDB.
@@ -18,7 +18,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 /*
- * Copyright (c) 2002-2020 "Neo4j,"
+ * Copyright (c) "Neo4j"
  * Neo4j Sweden AB [http://neo4j.com]
  *
  * This file is part of Neo4j.
@@ -38,31 +38,26 @@
  */
 package org.neo4j.server.web;
 
-import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import javax.servlet.http.HttpServletRequest;
+import javax.ws.rs.core.HttpHeaders;
 import javax.ws.rs.core.MediaType;
 
-import org.neo4j.graphdb.factory.GraphDatabaseSettings;
+import org.neo4j.configuration.GraphDatabaseSettings;
 import org.neo4j.logging.Log;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 public class HttpHeaderUtils
 {
 
     public static final String MAX_EXECUTION_TIME_HEADER = "max-execution-time";
 
-    public static final Map<String,String> CHARSET =
-            Collections.singletonMap( "charset", StandardCharsets.UTF_8.name() );
+    public static final Map<String,String> CHARSET = Map.of( "charset", UTF_8.name() );
 
     private HttpHeaderUtils()
     {
-    }
-
-    public static MediaType mediaTypeWithCharsetUtf8( String mediaType )
-    {
-        return new MediaType( mediaType, null, CHARSET );
     }
 
     public static MediaType mediaTypeWithCharsetUtf8( MediaType mediaType )
@@ -92,6 +87,25 @@ public class HttpHeaderUtils
     public static long getTransactionTimeout( HttpServletRequest request, Log errorLog )
     {
         String headerValue = request.getHeader( MAX_EXECUTION_TIME_HEADER );
+        return getTransactionTimeout( headerValue, errorLog );
+    }
+
+    /**
+     * Retrieve custom transaction timeout in milliseconds from numeric {@link #MAX_EXECUTION_TIME_HEADER} request
+     * header.
+     * If header is not set returns -1.
+     * @param headers http headers
+     * @param errorLog errors log for header parsing errors
+     * @return custom timeout if header set, -1 otherwise or when value is not a valid number.
+     */
+    public static long getTransactionTimeout( HttpHeaders headers, Log errorLog )
+    {
+        String headerValue = headers.getHeaderString( MAX_EXECUTION_TIME_HEADER );
+        return getTransactionTimeout( headerValue, errorLog );
+    }
+
+    private static long getTransactionTimeout( String headerValue, Log errorLog )
+    {
         if ( headerValue != null )
         {
             try
@@ -116,7 +130,7 @@ public class HttpHeaderUtils
      */
     public static boolean isValidHttpHeaderName( String name )
     {
-        if ( name == null || name.length() == 0 )
+        if ( name == null || name.isEmpty() )
         {
             return false;
         }
